- 行間を合わせた - アイコンの画像を変えた - ハイライトの色を無色にしたけれど、ずっと選択されてしまう。

--- a/ToDocalender/Base.lproj/Main.storyboard
+++ b/ToDocalender/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--Memo View Controller-->
         <scene sceneID="Bwp-X9-VQ0">
             <objects>
-                <viewController modalPresentationStyle="fullScreen" id="ine-vl-sat" customClass="MemoViewController" customModule="ToDocalender" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="ine-vl-sat" customClass="MemoViewController" customModule="dig" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DcQ-wZ-F8X">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -33,12 +33,16 @@
                                 <color key="highlightedColor" red="0.25882352939999997" green="0.25882352939999997" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <size key="shadowOffset" width="0.0" height="-2"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zgn-q9-CQj">
-                                <rect key="frame" x="272.5" y="327" width="57.5" height="57.5"/>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zgn-q9-CQj">
+                                <rect key="frame" x="280" y="327" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="aNs-L2-Dru"/>
+                                    <constraint firstAttribute="height" constant="50" id="itb-Ae-xPK"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <inset key="contentEdgeInsets" minX="3.5" minY="3.5" maxX="0.0" maxY="0.0"/>
                                 <inset key="imageEdgeInsets" minX="3.5" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <state key="normal" image="penicon">
+                                <state key="normal" image="pen_icon">
                                     <color key="titleColor" red="1" green="0.46274509803921571" blue="0.52156862745098043" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
@@ -72,7 +76,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9rA-Es-Hel" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1567" y="-639"/>
+            <point key="canvasLocation" x="1565.5999999999999" y="-639.13043478260875"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="TdB-MH-omy">
@@ -101,7 +105,7 @@
         <!--Tab View Controller-->
         <scene sceneID="m5v-Ae-fQL">
             <objects>
-                <viewController id="LR9-Wd-W08" customClass="TabViewController" customModule="ToDocalender" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="LR9-Wd-W08" customClass="TabViewController" customModule="dig" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YGn-Qu-kcE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -184,14 +188,14 @@
         <!--New-->
         <scene sceneID="8iY-3g-1aI">
             <objects>
-                <viewController storyboardIdentifier="AddScheduleViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Sb4-vT-2Sl" customClass="AddScheduleViewController" customModule="ToDocalender" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AddScheduleViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Sb4-vT-2Sl" customClass="AddScheduleViewController" customModule="dig" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Qzc-JF-OrM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zQL-YS-X1F">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" red="0.99215686274509807" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="55" id="oB6-Ib-Ag9">
                                         <rect key="frame" x="0.0" y="28" width="375" height="55"/>
@@ -199,9 +203,7 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oB6-Ib-Ag9" id="gJk-S8-J2n">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <color key="backgroundColor" red="0.99215686274509807" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </tableViewCellContentView>
-                                        <color key="tintColor" red="0.60392156862745094" green="0.60392156862745094" blue="0.60392156862745094" alpha="1" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -235,7 +237,7 @@
         <!--Search-->
         <scene sceneID="piE-is-x9g">
             <objects>
-                <viewController storyboardIdentifier="SearchViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hpE-4A-05e" customClass="SearchViewController" customModule="ToDocalender" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SearchViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hpE-4A-05e" customClass="SearchViewController" customModule="dig" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TTa-Pq-xiE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -251,29 +253,43 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2020/08/30" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ku2-Yr-Q8t">
-                                                    <rect key="frame" x="5" y="0.0" width="120" height="55"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="15"/>
-                                                    <color key="textColor" red="0.2627450980392157" green="0.2627450980392157" blue="0.2627450980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="タイトル" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WZu-RI-hER">
-                                                    <rect key="frame" x="125" y="0.0" width="150" height="55"/>
+                                                    <rect key="frame" x="103" y="0.0" width="157" height="55"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="15"/>
                                                     <color key="textColor" red="0.26274509800000001" green="0.26274509800000001" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00時00分" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iwH-Ob-o8R">
-                                                    <rect key="frame" x="282" y="0.0" width="90" height="55"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="15"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00時00分" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iwH-Ob-o8R">
+                                                    <rect key="frame" x="275" y="0.0" width="90" height="55"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="55" id="3hy-dk-Tb3"/>
+                                                        <constraint firstAttribute="width" constant="90" id="p9J-KT-8z0"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="12"/>
                                                     <color key="textColor" red="0.26274509800000001" green="0.26274509800000001" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2020/08/30" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ku2-Yr-Q8t">
+                                                    <rect key="frame" x="10" y="0.0" width="88" height="55"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="88" id="W7C-Za-Fno"/>
+                                                        <constraint firstAttribute="height" constant="55" id="max-SQ-Jgn"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="12"/>
+                                                    <color key="textColor" red="0.2627450980392157" green="0.2627450980392157" blue="0.2627450980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="Ku2-Yr-Q8t" firstAttribute="leading" secondItem="vi1-ZA-XPj" secondAttribute="leading" constant="10" id="Dbl-fM-YnN"/>
+                                                <constraint firstAttribute="trailing" secondItem="iwH-Ob-o8R" secondAttribute="trailing" constant="10" id="GBa-TF-Lmf"/>
+                                                <constraint firstAttribute="bottom" secondItem="Ku2-Yr-Q8t" secondAttribute="bottom" id="JDx-ib-mOI"/>
+                                                <constraint firstItem="iwH-Ob-o8R" firstAttribute="top" secondItem="vi1-ZA-XPj" secondAttribute="top" id="QJG-4h-WZX"/>
+                                                <constraint firstAttribute="bottom" secondItem="iwH-Ob-o8R" secondAttribute="bottom" id="fr5-Wg-fTg"/>
+                                                <constraint firstItem="Ku2-Yr-Q8t" firstAttribute="top" secondItem="vi1-ZA-XPj" secondAttribute="top" id="p8K-Ox-Qog"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </tableViewCell>
@@ -306,12 +322,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LZ6-Uw-FaP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="649" y="683"/>
+            <point key="canvasLocation" x="648.79999999999995" y="682.3088455772114"/>
         </scene>
         <!--Data Source-->
         <scene sceneID="ED9-mM-8qQ">
             <objects>
-                <viewController storyboardIdentifier="CalendarViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Z2n-T3-PMf" customClass="CalendarViewController" customModule="ToDocalender" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CalendarViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Z2n-T3-PMf" customClass="CalendarViewController" customModule="dig" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="F7l-Q2-OZK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -418,11 +434,11 @@
     <resources>
         <image name="add" width="60" height="60"/>
         <image name="home" width="60" height="60"/>
-        <image name="penicon" width="54" height="54"/>
+        <image name="pen_icon" width="60" height="60"/>
         <image name="plusicon2" width="54" height="54"/>
         <image name="search" width="60" height="60"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="TCS-WJ-ghe"/>
+        <segue reference="uMq-EF-9zj"/>
     </inferredMetricsTieBreakers>
 </document>
